<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/main_title"
        android:textSize="36sp"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/player_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48sp"
        android:text="@string/player_1"
        android:textSize="24sp"
        android:textColor="@color/p1_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/player_2"
        app:layout_constraintTop_toBottomOf="@id/main_title" />

    <TextView
        android:id="@+id/player_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48sp"
        android:text="@string/player_2"
        android:textSize="24sp"
        android:textColor="@color/p2_color"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/player_1"
        app:layout_constraintTop_toBottomOf="@id/main_title" />

    <EditText
        android:id="@+id/player_1_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="0dp"
        android:hint="@string/player_1"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/player_2_input"
        app:layout_constraintTop_toBottomOf="@id/player_1" />

    <EditText
        android:id="@+id/player_2_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/player_2"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@id/player_1_input"
        app:layout_constraintTop_toBottomOf="@id/player_2"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_fight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_fight"
        app:layout_constraintTop_toTopOf="@id/main_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>